--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 <body>
 	<canvas id="draw" width="800" height="800"></canvas>
 
-	<script src="js/ptrack.js"></script>
+	<script src="js/ptrack_receiver.js"></script>
 	<script src="js/scene.js"></script>
 
 	<style>
